<resources>
    <!-- MainActivity. -->
    <string name="app_name">MTBalance</string>
    <string name="settings_option">Settings</string>
    <string name="testing_option">Testing</string>
    <string name="fab_rides">Fab Rides</string>

    <!-- TestingActivity -->
    <string name="center_button">Center Button</string>
    <string name="front_button">Front Button</string>
    <string name="front_right_button">Front Right Button</string>
    <string name="right_button">Right Button</string>
    <string name="back_right_button">Back Right Button</string>
    <string name="back_button">Back Button</string>
    <string name="back_left_button">Back Left Button</string>
    <string name="left_button">Left Button</string>
    <string name="front_left_button">Front Left Button</string>

    <!-- MeasurementActivity. -->
    <string name="measuring_button">Measuring Button</string>
    <string name="calibrate_button">Calibrate Button</string>

    <!-- Rides Item. -->
    <string name="comptime_icon">Comptime Icon</string>
    <string name="feedback_icon">Feedback Icon</string>
    <string name="balperf_icon">Balperf Icon</string>
    <string name="baldev_icon">Baldev Icon</string>
    <string name="resptime_icon">Resptime Icon</string>

    <!-- Info Fragment. -->
    <string name="overview_title">Overview</string>
    <string name="attachment_title">Attachment</string>
    <string name="measuring_title">Measuring</string>
    <string name="post_hoc_feedback_title">Post-Hoc Feedback</string>
    <string name="feedback_title">Feedback Testing</string>
    <string name="application_title">Application Options</string>
    <string name="general_title">General</string>
    <string name="thresholds_title">Thresholds</string>
    <string name="lengths_title">Lengths</string>
    <string name="dimensions_title">Dimensions</string>

    <string name="overview_string">
        \n<i>MTBalance</i> allows users to track their balance during rides in order to get feedback on
        their posture and technique, both with real-time and post-hoc evaluation. Information about
        <b>sensor attachment</b>, <b>measuring</b>, <b>post-hoc feedback</b> and <b>application
        options</b> can be found here.</string>

    <string name="attachment_string">
        \nTo start measuring balance performance, the user attaches multiple DOT IMU sensors to their
        bike in the following manner: \n
        - <b>Bike sensor:</b> close to the center of mass of the bike. \n
        - <b>Position sensor:</b> on the bike frame, facing the saddle. \n
        - <b>Crank sensor:</b> to the left pedal crank, facing upwards. \n

        \nTwo more sensors are attached to the ankle and knee on the left leg of the user. All sensors
        are to be orientated to the <i>left side of the bike</i>. Finally, the user picks one of the
        4 applicable feedback options and attaches said feedback if necessary. \n

        \n<b>Note:</b> for first time usage it is recommended to initialize the settings for the
        application as preferred. The settings are explained in more detail in the <b>application
        options</b> section.</string>

    <string name="measuring_string_p1">
        \nThe user presses the <b>start ride</b> button to begin a new ride. Once the sensors are
        connected and synchronized, the ride is initiated by pressing the <b>play</b> button. The sensors
        should be calibrated by having the bike and user stand in an upright position, followed by
        pressing the <b>calibration</b> button. During the ride, sensors can be re-calibrated at
        any time by pressing the button again.</string>

    <string name="measuring_string_p2">
        \nThe sensors calculate the optimal balance zone and the current balance continuously. If the
        current balance deviates too much from the optimal balance, feedback is given
        depending on the chosen feedback option. The feedback attempts to steer the user back towards
        the optimal balance zone.</string>

    <string name="posthoc_pre_string">
        \nThe user is able to analyse the ride in more detail when a recording is finished.
        A card is generated in the <b>rides</b> tab of the application. This card gives a quick overview
        of the ride, including the following data:</string>

    <string name="posthoc_comptime_string">- The ride time, in <b>seconds</b> and ride date.</string>
    <string name="posthoc_feedback_string">- The feedback option used during the ride.</string>
    <string name="posthoc_balperf_string">- The balance performance, as a <b>percentage</b>.</string>
    <string name="posthoc_baldev_string">- The average balance threshold deviation, in <b>cm</b>.</string>
    <string name="posthoc_resptime_string">- The average balance response time, in <b>ms</b>.</string>

    <string name="posthoc_mid_string">
        \nOnce a card is clicked, the user can investigate the ride with more detail by the use of
        plots. The plots show the user balance during the ride with different filters. The following
        filters are available:</string>

    <string name="bothdir_icon">Bothdir Icon</string>
    <string name="xdir_icon">Xdir Icon</string>
    <string name="ydir_icon">Ydir Icon</string>

    <string name="posthoc_bothdir_string">- Shows two-directional user movement.</string>
    <string name="posthoc_xdir_string">- Shows sideways balance fluctuation over time.</string>
    <string name="posthoc_ydir_string">- Shows overt balance fluctuation over time.</string>

    <string name="posthoc_end_string">
        \nThe <b>x-axis</b> shows the sideways balance deviation, whereas the <b>y-axis</b> denotes the
        balance deviation in pitch. The <b>green zones</b> in the plots illustrate the optimal zone
        for the user balance to be in. As such, any point outside of these zones is a critical position
        at which the user would have received correctional feedback. \n

        \nAny point in the plot can be tapped to show precise information about its values,
        highlighting it in yellow. Points that share similar results are clustered together when
        tapped.</string>

    <string name="testing_string">
        \nThe icon next to the settings menu allows users to test a real-time feedback system before
        use. When a real-time feedback method is chosen in the settings menu, the peripheral device
        will automatically connect. The <b>arrows</b> denote a feedback direction; once tapped,
        feedback will be activated as if said direction was triggered in an actual ride.
    </string>

    <string name="general_string">
        \n<b>Participant number:</b> the participant number of the user. The list of rides is filtered
        per participant, so only the rides of the current participant are visible. \n

        \n<b>Feedback method:</b> the feedback method used during a ride.</string>

    <string name="thresholds_string">
        \n<b>Plot resolution:</b> allows users to tweak the detail in the post-hoc feedback plots.
        Resolution is inversely proportional to the given value, with a resolution of 1 showing all
        collected data points. \n

        \n<b>Threshold leniency:</b> sets the threshold leniency during rides. A higher leniency
        allows for more mistakes while riding and vice versa. The chosen leniency is reflected in
        the green zones of plots.</string>

    <string name="lengths_string">
        \n<b>Crank length:</b> the length of the bike crank from the center to the pedal,
        in centimeters. Floating point precision is allowed. \n

        \n<b>Lower leg length:</b> the length of the user’s lower leg, from the foot to the
        knee joint in centimeters. Floating point precision is allowed. \n

        \n<b>Upper leg length:</b> the length of the user’s upper leg, from the knee joint to the hip
        joint in centimeters. Floating point precision is allowed.</string>

    <string name="dimensions_string">
        \n<b>Offset dimension:</b> denotes the offset between the bike sensor and the center of the
        bike crank, in centimeters. Floating point precision is allowed. The following format is
        accepted: <i>“x,y,z”</i>. \n

        \n<b>Hip dimension:</b> denotes the offset between the hip joint and the center of mass of the
        user, in centimeters. Floating point precision is allowed. The following format is accepted:
        <i>“x,y,z”.</i></string>

    <!-- Plot Hiders. -->
    <string name="bothdir_hider">bothdir_hider</string>
    <string name="xdir_hider">xdir_hider</string>
    <string name="ydir_hider">ydir_hider</string>

</resources>